vlib/v/checker/tests/globals/assign_no_value.out
vlib/v/checker/tests/globals/assign_no_value.vv:2:9: error: `int` must be initialized
    1 | __global (
    2 |     test = int
      |            ~~~
    3 | )
